Changelog for FormItBuilder.

FormItBuilder 0.1.9-beta
====================================
- Added captcha support
- Fixed bug in non-required date fields (if date field was not required and empty an error message would be thrown).

FormItBuilder 0.1.8-beta
====================================
- Added emailFromName, emailToName, emailReplyToAddress, emailReplyToName, emailCCAddress, emailCCName, emailBCCAddress, emailBCCName
- Added ability to alter dynamic emailTpl
- Added file upload support*
- Added customValidators (see customValidators property for formIt)*
- Added validate (to allow extra validate options to be set)*
* Thanks for the assistance Adam!

FormItBuilder 0.1.7-beta
====================================
- Fixed escaping issues for special characters (Should have been using htmlspecialchars instead of htmlentities)
- Added methods for outputRaw and postHookRaw to allow a raw dump of formIt syntax and emailChunkSyntax.

FormItBuilder 0.1.6-beta
====================================
- Documentation Updates and small tweak to example snippet

FormItBuilder 0.1.5-beta
====================================
- First public release. Still a big work in progress.